# CMakeList.txt : CMake project for 23_3_train_occupancy_analysis, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (23_3_train_occupancy_analysis "main.cpp")

# TODO: Add tests and install targets if needed.
